--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div id="error"></div>
 
-<nav class="w3-sidenav w3-dark-grey" style="width:20%">
+<nav class="w3-sidenav w3-dark-grey" style="width:30%">
 <fieldset class="w3-container w3-border w3-hover-border-light-blue">
   <legend>Port Settings</legend>
   <table>
@@ -88,21 +88,27 @@
 </fieldset>
 </nav>
 
-<div class="Data w3-grey" style="margin-left:20%">
+<div class="Data w3-grey" style="margin-left:25%">
 <fieldset class="w3-container w3-border w3-hover-border-light-blue">
   <legend>Data receive</legend>
-  <textarea style="width:100%;height:0;padding-top:40%;overflow-y:auto;resize:none;" id="IncomingDataArea" readonly="true"></textarea>
+  <textarea rows="20" style="width:100%;overflow-y:auto;resize:none;" id="IncomingDataArea" readonly="true"></textarea>
 </fieldset>
 
 <fieldset class="w3-container w3-border w3-hover-border-light-blue">
   <legend>Data send</legend>
-  <textarea class="w3-container w3-threequarter" style="width:75%;resize:none;" id="SendDataArea" type="text"></textarea>
-  <button class="w3-btn w3-ripple w3-right w3-indigo w3-container w3-quarter" id="SendDataButton">Send</button>
+  <table style="width: 100%;">
+    <td colspan="5">
+      <textarea style="width:100%;resize:none;" id="SendDataArea" type="text"></textarea>
+    </td>
+    <td>
+      <button class="w3-btn w3-ripple w3-indigo" style="width: 100%;" id="SendDataButton">Send</button>
+    </td>
+  </table>
 </fieldset>
 
 <fieldset class="w3-container w3-border w3-hover-border-light-blue" id="CRC16Result" hidden="true">
   <legend>CRC16 Result [str + CRCL + CRCH]</legend>
-  <textarea class="w3-container" style="width:100%;resize:none;" id="CRC16ResultData" readonly="true"></textarea>
+  <textarea rows="2" style="width:100%;resize:none;" id="CRC16ResultData" readonly="true"></textarea>
 </fieldset>
 </div>
 
